feat:get inventories info
