# routes/api.php
@@ -2,7 +2,7 @@
 
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\UserController;
-use Illuminate\Http\Request;
+use App\Http\Controllers\InventoryController;
 use Illuminate\Support\Facades\Route;
 
 Route::group(['middleware' => 'auth:sanctum'], function () {
@@ -17,5 +17,7 @@ Route::prefix('/products')
         Route::get('/{product}', 'show')->whereNumber('product')->name('products.show');
         Route::get('/', 'index')->name('products.index');
     });
+
+Route::get('/inventories', [InventoryController::class, 'index'])->name('inventories.index');
 
 Route::post('/register', [UserController::class, 'register'])->name('user.register');
